fixed tons of stuff for nextjs to work -- i.e. changed types to allow for importing images, using svgs as components, configured nextjs and babel (to work for next js) and a few other small things

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ BackEnd/env/*
 **/__pycache__
 FrontEnd/node_modules
 
-# Frontend
-FrontEnd/node_modules
-FrontEnd/coverage
+# # Frontend
+# FrontEnd/node_modules
+# FrontEnd/coverage
+
+# # Next
+# FrontEnd/.next
