--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,17 +11,19 @@
     "@types/axios": "^0.14.0",
     "@types/google-map-react": "^2.1.0",
     "@types/jest": "^24.0.0",
+    "@types/next": "^9.0.0",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-places-autocomplete": "^7.2.6",
     "@types/react-redux": "^7.1.15",
-    "@types/react-router-dom": "^5.1.7",
     "@types/reactstrap": "^8.5.1",
     "aws-sdk": "^2.822.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
     "homehub-images-upload": "^1.2.8",
     "moment": "^2.29.1",
+    "next": "^10.0.6",
+    "next-images": "^1.7.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -33,18 +35,15 @@
     "react-images-upload": "^1.2.8",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
     "reactstrap": "^8.8.1",
     "typescript": "~3.8.2",
     "universal-cookie": "4.0.4",
     "zod": "^2.0.0-beta.29"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx}",
     "lint": "eslint --fix src/**/*.{js,jsx,ts,tsx}"
   },
@@ -65,6 +64,7 @@
   },
   "devDependencies": {
     "@types/node": "^12.19.12",
+    "babel-plugin-inline-react-svg": "^1.1.2",
     "eslint-config-airbnb-typescript-prettier": "^3.1.0",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1"
