--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.29.1",
     "next": "^10.0.6",
     "next-images": "^1.7.0",
+    "next-use-contextual-routing": "^2.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -36,6 +37,7 @@
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.0",
     "reactstrap": "^8.8.1",
+    "swr": "^0.4.2",
     "typescript": "~3.8.2",
     "universal-cookie": "4.0.4",
     "zod": "^2.0.0-beta.29"
