--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.29.1",
     "next": "^10.0.6",
     "next-images": "^1.7.0",
+    "next-redux-wrapper": "^6.0.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
