--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -21,6 +21,7 @@
     "aws-sdk": "^2.822.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
+    "classnames": "^2.2.6",
     "eslint-plugin-react-hooks": "^4.2.0",
     "homehub-images-upload": "^1.2.9",
     "moment": "^2.29.1",
