--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -43,6 +43,7 @@
     "swr": "^0.4.2",
     "typescript": "~3.8.2",
     "universal-cookie": "4.0.4",
+    "use-async-effect": "^2.2.3",
     "zod": "^2.0.0-beta.29"
   },
   "scripts": {
