--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "houseit",
+  "name": "homehub",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -28,7 +28,6 @@
     "next": "^10.0.6",
     "next-images": "^1.7.0",
     "next-redux-wrapper": "^6.0.2",
-    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.5.2",
     "react-calendar": "^3.3.0",
@@ -40,6 +39,7 @@
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.0",
     "reactstrap": "^8.8.1",
+    "sass": "^1.32.8",
     "swr": "^0.4.2",
     "typescript": "~3.8.2",
     "universal-cookie": "4.0.4",
