--- a/FrontEnd/tsconfig.json
+++ b/FrontEnd/tsconfig.json
@@ -13,7 +13,30 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": "./",
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@components": ["src/components"],
+      "@pages/*": ["src/pages/*"],
+      "@pages": ["src/pages"],
+      "@constants/*": ["src/constants/*"],
+      "@constants": ["src/constants"],
+      "@hooks/*": ["src/hooks/*"],
+      "@hooks": ["src/hooks"],
+      "@models/*": ["src/models/*"],
+      "@models": ["src/models"],
+      "@basics/*": ["src/components/basics/*"],
+      "@basics": ["src/components/basics"],
+      "@icons/*": ["src/assets/icons/*"],
+      "@icons": ["src/assets/icons"],
+      "@redux/*": ["src/redux/*"],
+      "@redux": ["src/redux"],
+      "@utils/*": ["src/utils/*"],
+      "@utils": ["src/utils"],
+      "@apis/*": ["src/apis/*"],
+      "@apis": ["src/apis"]
+    }
   },
   "include": ["src", "@types"],
   "exclude": ["node_modules"]
