changed to FunctionComponent instead of React.FC, updated some urls + few error fixes

--- a/FrontEnd/tsconfig.json
+++ b/FrontEnd/tsconfig.json
@@ -38,6 +38,6 @@
       "@apis": ["src/apis"]
     }
   },
-  "include": ["src", "@types"],
+  "include": ["src", "types"],
   "exclude": ["node_modules"]
 }
