--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -28,11 +28,11 @@
     "aws-sdk": "^2.822.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
-    "date-fns": "^2.17.0",
-    "material-ui": "^0.20.2",
     "classnames": "^2.2.6",
+    "date-fns": "^2.17.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "homehub-images-upload": "^1.2.9",
+    "material-ui": "^0.20.2",
     "moment": "^2.29.1",
     "next": "^10.0.6",
     "next-images": "^1.7.0",
@@ -51,7 +51,6 @@
     "reactstrap": "^8.8.1",
     "sass": "^1.32.8",
     "swr": "^0.4.2",
-    "typescript": "~3.8.2",
     "universal-cookie": "^4.0.4",
     "use-async-effect": "^2.2.3",
     "zod": "^2.0.0-beta.29"
@@ -87,6 +86,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^6.3.0",
     "prettier": "^2.2.1",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   }
 }
