--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -86,14 +86,20 @@
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.2.9",
     "@svgr/webpack": "^5.5.0",
     "@types/node": "^12.19.12",
     "babel-loader": "^8.2.2",
+    "chromatic": "^5.8.0",
+    "css-loader": "^5.2.4",
     "eslint-config-airbnb-typescript-prettier": "^3.1.0",
+    "file-loader": "^6.2.0",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^6.3.0",
     "prettier": "^2.2.1",
+    "sass-loader": "^11.1.0",
+    "style-loader": "^2.0.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
