--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -101,6 +101,7 @@
     "sass-loader": "^10",
     "style-loader": "^2.0.0",
     "ts-node": "^9.1.1",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.2.4"
   }
 }
