--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,8 +12,8 @@
     "@material-ui/pickers": "^3.2.10",
     "@react-google-maps/api": "^1.10.1",
     "@reduxjs/toolkit": "^1.5.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^7.1.2",
     "@types/axios": "^0.14.0",
     "@types/google-map-react": "^2.1.0",
@@ -62,7 +62,8 @@
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx}",
     "lint": "eslint --fix src/**/*.{js,jsx,ts,tsx}",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": "airbnb-typescript-prettier"
@@ -89,12 +90,16 @@
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.2.9",
     "@svgr/webpack": "^5.5.0",
+    "@testing-library/dom": "^7.31.0",
     "@types/node": "^12.19.12",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "chromatic": "^5.8.0",
     "css-loader": "^5.2.4",
     "eslint-config-airbnb-typescript-prettier": "^3.1.0",
     "file-loader": "^6.2.0",
+    "jest": "^26.6.3",
+    "jest-dom": "^4.0.0",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^6.3.0",
     "prettier": "^2.2.1",
