--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -17,7 +17,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/axios": "^0.14.0",
     "@types/google-map-react": "^2.1.0",
-    "@types/jest": "^24.0.0",
+    "@types/jest": "^26.0.23",
     "@types/next": "^9.0.0",
     "@types/react": "^16.14.2",
     "@types/react-dates": "^21.8.1",
@@ -32,6 +32,7 @@
     "date-fns": "^2.17.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "homehub-images-upload": "^1.2.9",
+    "identity-obj-proxy": "^3.0.0",
     "material-ui": "^0.20.2",
     "moment": "^2.29.1",
     "next": "^10.0.6",
@@ -63,7 +64,9 @@
     "lint": "eslint --fix src/**/*.{js,jsx,ts,tsx}",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "eslintConfig": {
     "extends": "airbnb-typescript-prettier"
@@ -99,12 +102,14 @@
     "eslint-config-airbnb-typescript-prettier": "^3.1.0",
     "file-loader": "^6.2.0",
     "jest": "^26.6.3",
+    "jest-css-modules-transform": "^4.2.1",
     "jest-dom": "^4.0.0",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^6.3.0",
     "prettier": "^2.2.1",
     "sass-loader": "^10",
     "style-loader": "^2.0.0",
+    "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.2.4"
