--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -104,8 +104,10 @@
     "jest": "^26.6.3",
     "jest-css-modules-transform": "^4.2.1",
     "jest-dom": "^4.0.0",
+    "jest-svg-transformer": "^1.0.0",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^6.3.0",
+    "parse-css-dimension": "^1.1.0",
     "prettier": "^2.2.1",
     "sass-loader": "^10",
     "style-loader": "^2.0.0",
