--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -44,8 +44,10 @@
     "react-dates": "^21.8.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.4",
+    "react-ga": "^3.3.0",
     "react-google-login": "^5.2.2",
     "react-google-maps": "^9.4.5",
+    "react-gtm-module": "^2.0.11",
     "react-images-upload": "^1.2.8",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.0",
@@ -96,6 +98,7 @@
     "@svgr/webpack": "^5.5.0",
     "@testing-library/dom": "^7.31.0",
     "@types/node": "^12.19.12",
+    "@types/react-gtm-module": "^2.0.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "chromatic": "^5.8.0",
