--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^16.14.2",
     "@types/react-dates": "^21.8.1",
     "@types/react-dom": "^16.9.10",
+    "@types/react-ga": "^2.3.0",
     "@types/react-places-autocomplete": "^7.2.6",
     "@types/react-redux": "^7.1.15",
     "@types/reactstrap": "^8.5.1",
