--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "eslint.workingDirectories": ["./NewFrontEnd"],
+  "eslint.workingDirectories": ["./FrontEnd"],
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
@@ -15,5 +15,7 @@
   "eslint.alwaysShowStatus": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "files.eol": "\n",
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "Frontend/node_modules/typescript/lib",
+  "eslint.options": { "configFile": "Frontend/.prettierrc" },
+  "eslint.nodePath": "Frontend/node_modules/"
 }
