--- a/BackEnd/config/requirements.txt
+++ b/BackEnd/config/requirements.txt
@@ -5,7 +5,7 @@ Flask-Cors==3.0.8
 Flask-SocketIO==4.2.1
 httplib2==0.18.0
 idna==2.8
-image==1.5.28
+image
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
@@ -18,14 +18,13 @@ python-socketio==4.4.0
 pytz==2019.3
 requests==2.22.0
 six==1.14.0
-SQLAlchemy==1.3.13
+SQLAlchemy
 sqlparse==0.3.0
 urllib3==1.25.8
 Werkzeug==1.0.0
 boto3
 awscli
 Flask-SQLAlchemy
-mysqlclient
 pytest
 google-auth==1.24.0
 inflection
