--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,6 +12,7 @@
     "@material-ui/pickers": "^3.2.10",
     "@react-google-maps/api": "^1.10.1",
     "@reduxjs/toolkit": "^1.5.1",
+    "@storybook/addon-docs": "^6.3.8",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^7.1.2",
@@ -121,7 +122,7 @@
     "parse-css-dimension": "^1.1.0",
     "prettier": "^2.2.1",
     "react-svg-loader": "^3.0.3",
-    "sass-loader": "^10",
+    "sass-loader": "^10.2.0",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
