--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -62,6 +62,7 @@
     "universal-cookie": "^4.0.4",
     "use-async-effect": "^2.2.3",
     "use-window-width-breakpoints": "^1.0.12",
+    "utility-types": "^3.10.0",
     "uuid": "^8.3.2",
     "zod": "^3.11.6"
   },
